NPLRuntime/externals/hlsl2glslfork/tools/bin/hlslang.output
Terminals unused in grammar

   MATRIX


State 435 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 variable_identifier: IDENTIFIER

    2 primary_expression: variable_identifier
    3                   | INTCONSTANT
    4                   | FLOATCONSTANT
    5                   | BOOLCONSTANT
    6                   | LEFT_PAREN expression RIGHT_PAREN

    7 postfix_expression: primary_expression
    8                   | postfix_expression LEFT_BRACKET int_expression RIGHT_BRACKET
    9                   | function_call
   10                   | postfix_expression DOT FIELD_SELECTION
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP

   13 int_expression: expression

   14 function_call: function_call_or_method

   15 function_call_or_method: function_call_generic
   16                        | postfix_expression DOT function_call_generic

   17 function_call_generic: function_call_header_with_parameters RIGHT_PAREN
   18                      | function_call_header_no_parameters RIGHT_PAREN

   19 function_call_header_no_parameters: function_call_header VOID_TYPE
   20                                   | function_call_header

   21 function_call_header_with_parameters: function_call_header assign_expression
   22                                     | function_call_header_with_parameters COMMA assign_expression

   23 function_call_header: function_identifier LEFT_PAREN

   24 function_identifier: type_specifier
   25                    | IDENTIFIER
   26                    | FIELD_SELECTION

   27 unary_expression: postfix_expression
   28                 | INC_OP unary_expression
   29                 | DEC_OP unary_expression
   30                 | unary_operator unary_expression
   31                 | LEFT_PAREN type_specifier_nonarray RIGHT_PAREN unary_expression

   32 unary_operator: PLUS
   33               | DASH
   34               | BANG
   35               | TILDE

   36 mul_expression: unary_expression
   37               | mul_expression STAR unary_expression
   38               | mul_expression SLASH unary_expression
   39               | mul_expression PERCENT unary_expression

   40 add_expression: mul_expression
   41               | add_expression PLUS mul_expression
   42               | add_expression DASH mul_expression

   43 shift_expression: add_expression
   44                 | shift_expression LEFT_OP add_expression
   45                 | shift_expression RIGHT_OP add_expression

   46 rel_expression: shift_expression
   47               | rel_expression LEFT_ANGLE shift_expression
   48               | rel_expression RIGHT_ANGLE shift_expression
   49               | rel_expression LE_OP shift_expression
   50               | rel_expression GE_OP shift_expression

   51 eq_expression: rel_expression
   52              | eq_expression EQ_OP rel_expression
   53              | eq_expression NE_OP rel_expression

   54 and_expression: eq_expression
   55               | and_expression AMPERSAND eq_expression

   56 xor_expression: and_expression
   57               | xor_expression CARET and_expression

   58 or_expression: xor_expression
   59              | or_expression VERTICAL_BAR xor_expression

   60 log_and_expression: or_expression
   61                   | log_and_expression AND_OP or_expression

   62 log_xor_expression: log_and_expression
   63                   | log_xor_expression XOR_OP log_and_expression

   64 log_or_expression: log_xor_expression
   65                  | log_or_expression OR_OP log_xor_expression

   66 cond_expression: log_or_expression
   67                | log_or_expression QUESTION expression COLON assign_expression

   68 assign_expression: cond_expression
   69                  | unary_expression assignment_operator assign_expression

   70 assignment_operator: EQUAL
   71                    | MUL_ASSIGN
   72                    | DIV_ASSIGN
   73                    | MOD_ASSIGN
   74                    | ADD_ASSIGN
   75                    | SUB_ASSIGN
   76                    | LEFT_ASSIGN
   77                    | RIGHT_ASSIGN
   78                    | AND_ASSIGN
   79                    | XOR_ASSIGN
   80                    | OR_ASSIGN

   81 expression: assign_expression
   82           | expression COMMA assign_expression

   83 const_expression: cond_expression

   84 declaration: function_prototype SEMICOLON
   85            | init_declarator_list SEMICOLON

   86 function_prototype: function_declarator RIGHT_PAREN
   87                   | function_declarator RIGHT_PAREN COLON IDENTIFIER

   88 function_declarator: function_header
   89                    | function_header_with_parameters

   90 function_header_with_parameters: function_header parameter_declaration
   91                                | function_header_with_parameters COMMA parameter_declaration

   92 function_header: fully_specified_type IDENTIFIER LEFT_PAREN

   93 parameter_declarator: type_specifier IDENTIFIER
   94                     | type_specifier IDENTIFIER EQUAL initializer
   95                     | type_specifier IDENTIFIER register_specifier
   96                     | type_specifier IDENTIFIER COLON IDENTIFIER
   97                     | type_specifier IDENTIFIER LEFT_BRACKET const_expression RIGHT_BRACKET
   98                     | type_specifier IDENTIFIER LEFT_BRACKET const_expression RIGHT_BRACKET COLON IDENTIFIER

   99 parameter_declaration: type_qualifier parameter_qualifier parameter_declarator
  100                      | parameter_qualifier parameter_declarator
  101                      | type_qualifier parameter_qualifier parameter_type_specifier
  102                      | parameter_qualifier parameter_type_specifier

  103 parameter_qualifier: /* empty */
  104                    | IN_QUAL
  105                    | OUT_QUAL
  106                    | INOUT_QUAL

  107 parameter_type_specifier: type_specifier

  108 init_declarator_list: single_declaration
  109                     | init_declarator_list COMMA IDENTIFIER type_info
  110                     | init_declarator_list COMMA IDENTIFIER LEFT_BRACKET RIGHT_BRACKET type_info
  111                     | init_declarator_list COMMA IDENTIFIER LEFT_BRACKET const_expression RIGHT_BRACKET type_info
  112                     | init_declarator_list COMMA IDENTIFIER LEFT_BRACKET RIGHT_BRACKET type_info EQUAL initializer
  113                     | init_declarator_list COMMA IDENTIFIER LEFT_BRACKET const_expression RIGHT_BRACKET type_info EQUAL initializer
  114                     | init_declarator_list COMMA IDENTIFIER type_info EQUAL initializer

  115 single_declaration: fully_specified_type
  116                   | fully_specified_type IDENTIFIER type_info
  117                   | fully_specified_type IDENTIFIER LEFT_BRACKET RIGHT_BRACKET type_info
  118                   | fully_specified_type IDENTIFIER LEFT_BRACKET const_expression RIGHT_BRACKET type_info
  119                   | fully_specified_type IDENTIFIER LEFT_BRACKET RIGHT_BRACKET type_info EQUAL initializer
  120                   | fully_specified_type IDENTIFIER LEFT_BRACKET const_expression RIGHT_BRACKET type_info EQUAL initializer
  121                   | fully_specified_type IDENTIFIER type_info EQUAL initializer

  122 fully_specified_type: type_specifier
  123                     | type_qualifier type_specifier

  124 type_qualifier: CONST_QUAL
  125               | STATIC_QUAL
  126               | STATIC_QUAL CONST_QUAL
  127               | CONST_QUAL STATIC_QUAL
  128               | UNIFORM

  129 type_specifier: type_specifier_nonarray
  130               | type_specifier_nonarray LEFT_BRACKET const_expression RIGHT_BRACKET

  131 type_specifier_nonarray: VOID_TYPE
  132                        | FLOAT_TYPE
  133                        | HALF_TYPE
  134                        | FIXED_TYPE
  135                        | INT_TYPE
  136                        | BOOL_TYPE
  137                        | VECTOR LEFT_ANGLE FLOAT_TYPE COMMA INTCONSTANT RIGHT_ANGLE
  138                        | VECTOR LEFT_ANGLE INT_TYPE COMMA INTCONSTANT RIGHT_ANGLE
  139                        | VECTOR LEFT_ANGLE BOOL_TYPE COMMA INTCONSTANT RIGHT_ANGLE
  140                        | VEC2
  141                        | VEC3
  142                        | VEC4
  143                        | HVEC2
  144                        | HVEC3
  145                        | HVEC4
  146                        | FVEC2
  147                        | FVEC3
  148                        | FVEC4
  149                        | BVEC2
  150                        | BVEC3
  151                        | BVEC4
  152                        | IVEC2
  153                        | IVEC3
  154                        | IVEC4
  155                        | MATRIX2x2
  156                        | MATRIX2x3
  157                        | MATRIX2x4
  158                        | MATRIX3x2
  159                        | MATRIX3x3
  160                        | MATRIX3x4
  161                        | MATRIX4x2
  162                        | MATRIX4x3
  163                        | MATRIX4x4
  164                        | HMATRIX2x2
  165                        | HMATRIX2x3
  166                        | HMATRIX2x4
  167                        | HMATRIX3x2
  168                        | HMATRIX3x3
  169                        | HMATRIX3x4
  170                        | HMATRIX4x2
  171                        | HMATRIX4x3
  172                        | HMATRIX4x4
  173                        | FMATRIX2x2
  174                        | FMATRIX2x3
  175                        | FMATRIX2x4
  176                        | FMATRIX3x2
  177                        | FMATRIX3x3
  178                        | FMATRIX3x4
  179                        | FMATRIX4x2
  180                        | FMATRIX4x3
  181                        | FMATRIX4x4
  182                        | TEXTURE
  183                        | SAMPLERGENERIC
  184                        | SAMPLER1D
  185                        | SAMPLER2D
  186                        | SAMPLER2D_HALF
  187                        | SAMPLER2D_FLOAT
  188                        | SAMPLER3D
  189                        | SAMPLERCUBE
  190                        | SAMPLERCUBE_HALF
  191                        | SAMPLERCUBE_FLOAT
  192                        | SAMPLERRECT
  193                        | SAMPLERRECTSHADOW
  194                        | SAMPLER1DSHADOW
  195                        | SAMPLER2DSHADOW
  196                        | SAMPLER2DARRAY
  197                        | struct_specifier
  198                        | TYPE_NAME

  199 struct_specifier: STRUCT IDENTIFIER LEFT_BRACE struct_declaration_list RIGHT_BRACE
  200                 | STRUCT LEFT_BRACE struct_declaration_list RIGHT_BRACE

  201 struct_declaration_list: struct_declaration
  202                        | struct_declaration_list struct_declaration

  203 struct_declaration: type_specifier struct_declarator_list SEMICOLON

  204 struct_declarator_list: struct_declarator
  205                       | struct_declarator_list COMMA struct_declarator

  206 struct_declarator: IDENTIFIER
  207                  | IDENTIFIER COLON IDENTIFIER
  208                  | IDENTIFIER LEFT_BRACKET const_expression RIGHT_BRACKET
  209                  | IDENTIFIER LEFT_BRACKET const_expression RIGHT_BRACKET COLON IDENTIFIER

  210 initializer: assign_expression
  211            | initialization_list
  212            | sampler_initializer

  213 declaration_statement: declaration

  214 statement: compound_statement
  215          | simple_statement

  216 simple_statement: declaration_statement
  217                 | expression_statement
  218                 | selection_statement
  219                 | iteration_statement
  220                 | jump_statement

  221 compound_statement: LEFT_BRACE RIGHT_BRACE

  222 $@1: /* empty */

  223 $@2: /* empty */

  224 compound_statement: LEFT_BRACE $@1 statement_list $@2 RIGHT_BRACE

  225 statement_no_new_scope: compound_statement_no_new_scope
  226                       | simple_statement

  227 compound_statement_no_new_scope: LEFT_BRACE RIGHT_BRACE
  228                                | LEFT_BRACE statement_list RIGHT_BRACE

  229 statement_list: statement
  230               | statement_list statement

  231 expression_statement: SEMICOLON
  232                     | expression SEMICOLON

  233 selection_statement: IF LEFT_PAREN expression RIGHT_PAREN selection_rest_statement

  234 selection_rest_statement: statement ELSE statement
  235                         | statement

  236 condition: expression
  237          | fully_specified_type IDENTIFIER EQUAL initializer

  238 $@3: /* empty */

  239 iteration_statement: WHILE LEFT_PAREN $@3 condition RIGHT_PAREN statement_no_new_scope

  240 $@4: /* empty */

  241 iteration_statement: DO $@4 statement WHILE LEFT_PAREN expression RIGHT_PAREN SEMICOLON

  242 $@5: /* empty */

  243 iteration_statement: FOR LEFT_PAREN $@5 for_init_statement for_rest_statement RIGHT_PAREN statement_no_new_scope

  244 for_init_statement: expression_statement
  245                   | declaration_statement

  246 conditionopt: condition
  247             | /* empty */

  248 for_rest_statement: conditionopt SEMICOLON
  249                   | conditionopt SEMICOLON expression

  250 jump_statement: CONTINUE SEMICOLON
  251               | BREAK SEMICOLON
  252               | RETURN SEMICOLON
  253               | RETURN expression SEMICOLON
  254               | DISCARD SEMICOLON

  255 translation_unit: external_declaration
  256                 | translation_unit external_declaration

  257 external_declaration: function_definition
  258                     | declaration
  259                     | SEMICOLON

  260 $@6: /* empty */

  261 function_definition: function_prototype $@6 compound_statement_no_new_scope

  262 initialization_list: LEFT_BRACE initializer_list RIGHT_BRACE
  263                    | LEFT_BRACE initializer_list COMMA RIGHT_BRACE

  264 initializer_list: assign_expression
  265                 | initialization_list
  266                 | initializer_list COMMA assign_expression
  267                 | initializer_list COMMA initialization_list

  268 annotation: LEFT_ANGLE RIGHT_ANGLE
  269           | LEFT_ANGLE annotation_list RIGHT_ANGLE

  270 annotation_list: annotation_item
  271                | annotation_list annotation_item

  272 annotation_item: ann_type IDENTIFIER EQUAL ann_literal SEMICOLON

  273 ann_type: FLOAT_TYPE
  274         | HALF_TYPE
  275         | FIXED_TYPE
  276         | INT_TYPE
  277         | BOOL_TYPE
  278         | STRING_TYPE
  279         | BVEC2
  280         | BVEC3
  281         | BVEC4
  282         | IVEC2
  283         | IVEC3
  284         | IVEC4
  285         | VEC2
  286         | VEC3
  287         | VEC4
  288         | HVEC2
  289         | HVEC3
  290         | HVEC4
  291         | FVEC2
  292         | FVEC3
  293         | FVEC4

  294 ann_literal: ann_numerical_constant
  295            | STRINGCONSTANT
  296            | ann_literal_constructor
  297            | ann_literal_init_list

  298 ann_numerical_constant: INTCONSTANT
  299                       | BOOLCONSTANT
  300                       | FLOATCONSTANT

  301 ann_literal_constructor: ann_type LEFT_PAREN ann_value_list RIGHT_PAREN

  302 ann_value_list: ann_numerical_constant
  303               | ann_value_list COMMA ann_numerical_constant

  304 ann_literal_init_list: LEFT_BRACE ann_value_list RIGHT_BRACE

  305 register_specifier: COLON REGISTER LEFT_PAREN IDENTIFIER RIGHT_PAREN

  306 semantic: COLON IDENTIFIER

  307 type_info: /* empty */
  308          | semantic
  309          | register_specifier
  310          | annotation
  311          | semantic annotation
  312          | semantic register_specifier
  313          | register_specifier annotation
  314          | semantic register_specifier annotation

  315 sampler_initializer: SAMPLERSTATE LEFT_BRACE sampler_init_list RIGHT_BRACE
  316                    | SAMPLERSTATE LEFT_BRACE RIGHT_BRACE

  317 sampler_init_list: sampler_init_item
  318                  | sampler_init_list sampler_init_item

  319 sampler_init_item: IDENTIFIER EQUAL IDENTIFIER SEMICOLON
  320                  | IDENTIFIER EQUAL LEFT_ANGLE IDENTIFIER RIGHT_ANGLE SEMICOLON
  321                  | IDENTIFIER EQUAL LEFT_PAREN IDENTIFIER RIGHT_PAREN SEMICOLON
  322                  | TEXTURE EQUAL IDENTIFIER SEMICOLON
  323                  | TEXTURE EQUAL LEFT_ANGLE IDENTIFIER RIGHT_ANGLE SEMICOLON
  324                  | TEXTURE EQUAL LEFT_PAREN IDENTIFIER RIGHT_PAREN SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
CONST_QUAL (258) 124 126 127
STATIC_QUAL (259) 125 126 127
BOOL_TYPE (260) 136 139 277
FLOAT_TYPE (261) 132 137 273
INT_TYPE (262) 135 138 276
STRING_TYPE (263) 278
FIXED_TYPE (264) 134 275
HALF_TYPE (265) 133 274
BREAK (266) 251
CONTINUE (267) 250
DO (268) 241
ELSE (269) 234
FOR (270) 243
IF (271) 233
DISCARD (272) 254
RETURN (273) 252 253
BVEC2 (274) 149 279
BVEC3 (275) 150 280
BVEC4 (276) 151 281
IVEC2 (277) 152 282
IVEC3 (278) 153 283
IVEC4 (279) 154 284
VEC2 (280) 140 285
VEC3 (281) 141 286
VEC4 (282) 142 287
HVEC2 (283) 143 288
HVEC3 (284) 144 289
HVEC4 (285) 145 290
FVEC2 (286) 146 291
FVEC3 (287) 147 292
FVEC4 (288) 148 293
MATRIX2x2 (289) 155
MATRIX2x3 (290) 156
MATRIX2x4 (291) 157
MATRIX3x2 (292) 158
MATRIX3x3 (293) 159
MATRIX3x4 (294) 160
MATRIX4x2 (295) 161
MATRIX4x3 (296) 162
MATRIX4x4 (297) 163
HMATRIX2x2 (298) 164
HMATRIX2x3 (299) 165
HMATRIX2x4 (300) 166
HMATRIX3x2 (301) 167
HMATRIX3x3 (302) 168
HMATRIX3x4 (303) 169
HMATRIX4x2 (304) 170
HMATRIX4x3 (305) 171
HMATRIX4x4 (306) 172
FMATRIX2x2 (307) 173
FMATRIX2x3 (308) 174
FMATRIX2x4 (309) 175
FMATRIX3x2 (310) 176
FMATRIX3x3 (311) 177
FMATRIX3x4 (312) 178
FMATRIX4x2 (313) 179
FMATRIX4x3 (314) 180
FMATRIX4x4 (315) 181
IN_QUAL (316) 104
OUT_QUAL (317) 105
INOUT_QUAL (318) 106
UNIFORM (319) 128
STRUCT (320) 199 200
VOID_TYPE (321) 19 131
WHILE (322) 239 241
SAMPLER1D (323) 184
SAMPLER2D (324) 185
SAMPLER3D (325) 188
SAMPLERCUBE (326) 189
SAMPLER1DSHADOW (327) 194
SAMPLER2DSHADOW (328) 195
SAMPLER2DARRAY (329) 196
SAMPLERRECTSHADOW (330) 193
SAMPLERRECT (331) 192
SAMPLER2D_HALF (332) 186
SAMPLER2D_FLOAT (333) 187
SAMPLERCUBE_HALF (334) 190
SAMPLERCUBE_FLOAT (335) 191
SAMPLERGENERIC (336) 183
VECTOR (337) 137 138 139
MATRIX (338)
REGISTER (339) 305
TEXTURE (340) 182 322 323 324
SAMPLERSTATE (341) 315 316
IDENTIFIER (342) 1 25 87 92 93 94 95 96 97 98 109 110 111 112 113 114
    116 117 118 119 120 121 199 206 207 208 209 237 272 305 306 319
    320 321 322 323 324
TYPE_NAME (343) 198
FLOATCONSTANT (344) 4 300
INTCONSTANT (345) 3 137 138 139 298
BOOLCONSTANT (346) 5 299
STRINGCONSTANT (347) 295
FIELD_SELECTION (348) 10 26
LEFT_OP (349) 44
RIGHT_OP (350) 45
INC_OP (351) 11 28
DEC_OP (352) 12 29
LE_OP (353) 49
GE_OP (354) 50
EQ_OP (355) 52
NE_OP (356) 53
AND_OP (357) 61
OR_OP (358) 65
XOR_OP (359) 63
MUL_ASSIGN (360) 71
DIV_ASSIGN (361) 72
ADD_ASSIGN (362) 74
MOD_ASSIGN (363) 73
LEFT_ASSIGN (364) 76
RIGHT_ASSIGN (365) 77
AND_ASSIGN (366) 78
XOR_ASSIGN (367) 79
OR_ASSIGN (368) 80
SUB_ASSIGN (369) 75
LEFT_PAREN (370) 6 23 31 92 233 239 241 243 301 305 321 324
RIGHT_PAREN (371) 6 17 18 31 86 87 233 239 241 243 301 305 321 324
LEFT_BRACKET (372) 8 97 98 110 111 112 113 117 118 119 120 130 208
    209
RIGHT_BRACKET (373) 8 97 98 110 111 112 113 117 118 119 120 130 208
    209
LEFT_BRACE (374) 199 200 221 224 227 228 262 263 304 315 316
RIGHT_BRACE (375) 199 200 221 224 227 228 262 263 304 315 316
DOT (376) 10 16
COMMA (377) 22 82 91 109 110 111 112 113 114 137 138 139 205 263 266
    267 303
COLON (378) 67 87 96 98 207 209 305 306
EQUAL (379) 70 94 112 113 114 119 120 121 237 272 319 320 321 322 323
    324
SEMICOLON (380) 84 85 203 231 232 241 248 249 250 251 252 253 254 259
    272 319 320 321 322 323 324
BANG (381) 34
DASH (382) 33 42
TILDE (383) 35
PLUS (384) 32 41
STAR (385) 37
SLASH (386) 38
PERCENT (387) 39
LEFT_ANGLE (388) 47 137 138 139 268 269 320 323
RIGHT_ANGLE (389) 48 137 138 139 268 269 320 323
VERTICAL_BAR (390) 59
CARET (391) 57
AMPERSAND (392) 55
QUESTION (393) 67


Nonterminals, with rules where they appear

$accept (139)
    on left: 0
variable_identifier (140)
    on left: 1, on right: 2
primary_expression (141)
    on left: 2 3 4 5 6, on right: 7
postfix_expression (142)
    on left: 7 8 9 10 11 12, on right: 8 10 11 12 16 27
int_expression (143)
    on left: 13, on right: 8
function_call (144)
    on left: 14, on right: 9
function_call_or_method (145)
    on left: 15 16, on right: 14
function_call_generic (146)
    on left: 17 18, on right: 15 16
function_call_header_no_parameters (147)
    on left: 19 20, on right: 18
function_call_header_with_parameters (148)
    on left: 21 22, on right: 17 22
function_call_header (149)
    on left: 23, on right: 19 20 21
function_identifier (150)
    on left: 24 25 26, on right: 23
unary_expression (151)
    on left: 27 28 29 30 31, on right: 28 29 30 31 36 37 38 39 69
unary_operator (152)
    on left: 32 33 34 35, on right: 30
mul_expression (153)
    on left: 36 37 38 39, on right: 37 38 39 40 41 42
add_expression (154)
    on left: 40 41 42, on right: 41 42 43 44 45
shift_expression (155)
    on left: 43 44 45, on right: 44 45 46 47 48 49 50
rel_expression (156)
    on left: 46 47 48 49 50, on right: 47 48 49 50 51 52 53
eq_expression (157)
    on left: 51 52 53, on right: 52 53 54 55
and_expression (158)
    on left: 54 55, on right: 55 56 57
xor_expression (159)
    on left: 56 57, on right: 57 58 59
or_expression (160)
    on left: 58 59, on right: 59 60 61
log_and_expression (161)
    on left: 60 61, on right: 61 62 63
log_xor_expression (162)
    on left: 62 63, on right: 63 64 65
log_or_expression (163)
    on left: 64 65, on right: 65 66 67
cond_expression (164)
    on left: 66 67, on right: 68 83
assign_expression (165)
    on left: 68 69, on right: 21 22 67 69 81 82 210 264 266
assignment_operator (166)
    on left: 70 71 72 73 74 75 76 77 78 79 80, on right: 69
expression (167)
    on left: 81 82, on right: 6 13 67 82 232 233 236 241 249 253
const_expression (168)
    on left: 83, on right: 97 98 111 113 118 120 130 208 209
declaration (169)
    on left: 84 85, on right: 213 258
function_prototype (170)
    on left: 86 87, on right: 84 261
function_declarator (171)
    on left: 88 89, on right: 86 87
function_header_with_parameters (172)
    on left: 90 91, on right: 89 91
function_header (173)
    on left: 92, on right: 88 90
parameter_declarator (174)
    on left: 93 94 95 96 97 98, on right: 99 100
parameter_declaration (175)
    on left: 99 100 101 102, on right: 90 91
parameter_qualifier (176)
    on left: 103 104 105 106, on right: 99 100 101 102
parameter_type_specifier (177)
    on left: 107, on right: 101 102
init_declarator_list (178)
    on left: 108 109 110 111 112 113 114, on right: 85 109 110 111
    112 113 114
single_declaration (179)
    on left: 115 116 117 118 119 120 121, on right: 108
fully_specified_type (180)
    on left: 122 123, on right: 92 115 116 117 118 119 120 121 237
type_qualifier (181)
    on left: 124 125 126 127 128, on right: 99 101 123
type_specifier (182)
    on left: 129 130, on right: 24 93 94 95 96 97 98 107 122 123 203
type_specifier_nonarray (183)
    on left: 131 132 133 134 135 136 137 138 139 140 141 142 143 144
    145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160
    161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176
    177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192
    193 194 195 196 197 198, on right: 31 129 130
struct_specifier (184)
    on left: 199 200, on right: 197
struct_declaration_list (185)
    on left: 201 202, on right: 199 200 202
struct_declaration (186)
    on left: 203, on right: 201 202
struct_declarator_list (187)
    on left: 204 205, on right: 203 205
struct_declarator (188)
    on left: 206 207 208 209, on right: 204 205
initializer (189)
    on left: 210 211 212, on right: 94 112 113 114 119 120 121 237
declaration_statement (190)
    on left: 213, on right: 216 245
statement (191)
    on left: 214 215, on right: 229 230 234 235 241
simple_statement (192)
    on left: 216 217 218 219 220, on right: 215 226
compound_statement (193)
    on left: 221 224, on right: 214
$@1 (194)
    on left: 222, on right: 224
$@2 (195)
    on left: 223, on right: 224
statement_no_new_scope (196)
    on left: 225 226, on right: 239 243
compound_statement_no_new_scope (197)
    on left: 227 228, on right: 225 261
statement_list (198)
    on left: 229 230, on right: 224 228 230
expression_statement (199)
    on left: 231 232, on right: 217 244
selection_statement (200)
    on left: 233, on right: 218
selection_rest_statement (201)
    on left: 234 235, on right: 233
condition (202)
    on left: 236 237, on right: 239 246
iteration_statement (203)
    on left: 239 241 243, on right: 219
$@3 (204)
    on left: 238, on right: 239
$@4 (205)
    on left: 240, on right: 241
$@5 (206)
    on left: 242, on right: 243
for_init_statement (207)
    on left: 244 245, on right: 243
conditionopt (208)
    on left: 246 247, on right: 248 249
for_rest_statement (209)
    on left: 248 249, on right: 243
jump_statement (210)
    on left: 250 251 252 253 254, on right: 220
translation_unit (211)
    on left: 255 256, on right: 0 256
external_declaration (212)
    on left: 257 258 259, on right: 255 256
function_definition (213)
    on left: 261, on right: 257
$@6 (214)
    on left: 260, on right: 261
initialization_list (215)
    on left: 262 263, on right: 211 265 267
initializer_list (216)
    on left: 264 265 266 267, on right: 262 263 266 267
annotation (217)
    on left: 268 269, on right: 310 311 313 314
annotation_list (218)
    on left: 270 271, on right: 269 271
annotation_item (219)
    on left: 272, on right: 270 271
ann_type (220)
    on left: 273 274 275 276 277 278 279 280 281 282 283 284 285 286
    287 288 289 290 291 292 293, on right: 272 301
ann_literal (221)
    on left: 294 295 296 297, on right: 272
ann_numerical_constant (222)
    on left: 298 299 300, on right: 294 302 303
ann_literal_constructor (223)
    on left: 301, on right: 296
ann_value_list (224)
    on left: 302 303, on right: 301 303 304
ann_literal_init_list (225)
    on left: 304, on right: 297
register_specifier (226)
    on left: 305, on right: 95 309 312 313 314
semantic (227)
    on left: 306, on right: 308 311 312 314
type_info (228)
    on left: 307 308 309 310 311 312 313 314, on right: 109 110 111
    112 113 114 116 117 118 119 120 121
sampler_initializer (229)
    on left: 315 316, on right: 212
sampler_init_list (230)
    on left: 317 318, on right: 315 318
sampler_init_item (231)
    on left: 319 320 321 322 323 324, on right: 317 318


state 0

    0 $accept: . translation_unit $end

    CONST_QUAL         shift, and go to state 1
    STATIC_QUAL        shift, and go to state 2
    BOOL_TYPE          shift, and go to state 3
    FLOAT_TYPE         shift, and go to state 4
    INT_TYPE           shift, and go to state 5
    FIXED_TYPE         shift, and go to state 6
    HALF_TYPE          shift, and go to state 7
    BVEC2              shift, and go to state 8
    BVEC3              shift, and go to state 9
    BVEC4              shift, and go to state 10
    IVEC2              shift, and go to state 11
    IVEC3              shift, and go to state 12
    IVEC4              shift, and go to state 13
    VEC2               shift, and go to state 14
    VEC3               shift, and go to state 15
    VEC4               shift, and go to state 16
    HVEC2              shift, and go to state 17
    HVEC3              shift, and go to state 18
    HVEC4              shift, and go to state 19
    FVEC2              shift, and go to state 20
    FVEC3              shift, and go to state 21
    FVEC4              shift, and go to state 22
    MATRIX2x2          shift, and go to state 23
    MATRIX2x3          shift, and go to state 24
    MATRIX2x4          shift, and go to state 25
    MATRIX3x2          shift, and go to state 26
    MATRIX3x3          shift, and go to state 27
    MATRIX3x4          shift, and go to state 28
    MATRIX4x2          shift, and go to state 29
    MATRIX4x3          shift, and go to state 30
    MATRIX4x4          shift, and go to state 31
    HMATRIX2x2         shift, and go to state 32
    HMATRIX2x3         shift, and go to state 33
    HMATRIX2x4         shift, and go to state 34
    HMATRIX3x2         shift, and go to state 35
    HMATRIX3x3         shift, and go to state 36
    HMATRIX3x4         shift, and go to state 37
    HMATRIX4x2         shift, and go to state 38
    HMATRIX4x3         shift, and go to state 39
    HMATRIX4x4         shift, and go to state 40
    FMATRIX2x2         shift, and go to state 41
    FMATRIX2x3         shift, and go to state 42
    FMATRIX2x4         shift, and go to state 43
    FMATRIX3x2         shift, and go to state 44
    FMATRIX3x3         shift, and go to state 45
    FMATRIX3x4         shift, and go to state 46
    FMATRIX4x2         shift, and go to state 47
    FMATRIX4x3         shift, and go to state 48
    FMATRIX4x4         shift, and go to state 49
    UNIFORM            shift, and go to state 50
    STRUCT             shift, and go to state 51
    VOID_TYPE          shift, and go to state 52
    SAMPLER1D          shift, and go to state 53
    SAMPLER2D          shift, and go to state 54
    SAMPLER3D          shift, and go to state 55
    SAMPLERCUBE        shift, and go to state 56
    SAMPLER1DSHADOW    shift, and go to state 57
    SAMPLER2DSHADOW    shift, and go to state 58
    SAMPLER2DARRAY     shift, and go to state 59
    SAMPLERRECTSHADOW  shift, and go to state 60
    SAMPLERRECT        shift, and go to state 61
    SAMPLER2D_HALF     shift, and go to state 62
    SAMPLER2D_FLOAT    shift, and go to state 63
    SAMPLERCUBE_HALF   shift, and go to state 64
    SAMPLERCUBE_FLOAT  shift, and go to state 65
    SAMPLERGENERIC     shift, and go to state 66
    VECTOR             shift, and go to state 67
    TEXTURE            shift, and go to state 68
    TYPE_NAME          shift, and go to state 69
    SEMICOLON          shift, and go to state 70

    declaration                      go to state 71
    function_prototype               go to state 72
    function_declarator              go to state 73
    function_header_with_parameters  go to state 74
    function_header                  go to state 75
    init_declarator_list             go to state 76
    single_declaration               go to state 77
    fully_specified_type             go to state 78
    type_qualifier                   go to state 79
    type_specifier                   go to state 80
    type_specifier_nonarray          go to state 81
    struct_specifier                 go to state 82
    translation_unit                 go to state 83
    external_declaration             go to state 84
    function_definition              go to state 85


state 1

  124 type_qualifier: CONST_QUAL .
  127               | CONST_QUAL . STATIC_QUAL

    STATIC_QUAL  shift, and go to state 86

    $default  reduce using rule 124 (type_qualifier)


state 2

  125 type_qualifier: STATIC_QUAL .
  126               | STATIC_QUAL . CONST_QUAL

    CONST_QUAL  shift, and go to state 87

    $default  reduce using rule 125 (type_qualifier)


state 3

  136 type_specifier_nonarray: BOOL_TYPE .

    $default  reduce using rule 136 (type_specifier_nonarray)


state 4

  132 type_specifier_nonarray: FLOAT_TYPE .

    $default  reduce using rule 132 (type_specifier_nonarray)


state 5

  135 type_specifier_nonarray: INT_TYPE .

    $default  reduce using rule 135 (type_specifier_nonarray)


state 6

  134 type_specifier_nonarray: FIXED_TYPE .

    $default  reduce using rule 134 (type_specifier_nonarray)


state 7

  133 type_specifier_nonarray: HALF_TYPE .

    $default  reduce using rule 133 (type_specifier_nonarray)


state 8

  149 type_specifier_nonarray: BVEC2 .

    $default  reduce using rule 149 (type_specifier_nonarray)


state 9

  150 type_specifier_nonarray: BVEC3 .

    $default  reduce using rule 150 (type_specifier_nonarray)


state 10

  151 type_specifier_nonarray: BVEC4 .

    $default  reduce using rule 151 (type_specifier_nonarray)


state 11

  152 type_specifier_nonarray: IVEC2 .

    $default  reduce using rule 152 (type_specifier_nonarray)


state 12

  153 type_specifier_nonarray: IVEC3 .

    $default  reduce using rule 153 (type_specifier_nonarray)


state 13

  154 type_specifier_nonarray: IVEC4 .

    $default  reduce using rule 154 (type_specifier_nonarray)


state 14

  140 type_specifier_nonarray: VEC2 .

    $default  reduce using rule 140 (type_specifier_nonarray)


state 15

  141 type_specifier_nonarray: VEC3 .

    $default  reduce using rule 141 (type_specifier_nonarray)


state 16

  142 type_specifier_nonarray: VEC4 .

    $default  reduce using rule 142 (type_specifier_nonarray)


state 17

  143 type_specifier_nonarray: HVEC2 .

    $default  reduce using rule 143 (type_specifier_nonarray)


state 18

  144 type_specifier_nonarray: HVEC3 .

    $default  reduce using rule 144 (type_specifier_nonarray)

